[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://enemy_64.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Enemy" type="Node2D" groups=[
"Enemies",
]]

script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 4
collision/safe_margin = 0.08
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D" index="1"]

texture = ExtResource( 2 )
flip_v = true
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Gun_Left" type="Node2D" parent="KinematicBody2D" index="2"]

position = Vector2( -29, 30 )
scale = Vector2( 0.0311337, 0.0625018 )
_sections_unfolded = [ "Transform" ]

[node name="Gun_Right" type="Node2D" parent="KinematicBody2D" index="3"]

position = Vector2( 29, 30 )
scale = Vector2( 0.031302, 0.0626504 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 0
wait_time = 0.8
one_shot = false
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


